--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "0.18.0"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "tslint": "5.12.0",
     "typescript": "3.2.2"
   },
