improve tslint and tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,8 @@
 {
   "compilerOptions": {
-    "esModuleInterop": true,
+    "removeComments": true,
     "module": "commonjs",
     "outDir": "dist",
-    "strict": true,
     "target": "es5"
   }
 }
