--- a/package.json
+++ b/package.json
@@ -7,11 +7,39 @@
     "axios": "0.18.0"
   },
   "devDependencies": {
-    "@types/axios": "^0.14.0",
+    "@types/axios": "0.14.0",
+    "husky": "1.3.0",
+    "lint-staged": "8.1.0",
+    "prettier": "1.15.3",
     "tslint": "5.12.0",
     "typescript": "3.2.2"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "license": "MIT",
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "prettier --write",
+      "yarn tslint",
+      "git add"
+    ]
+  },
   "main": "dist/index.js",
-  "repository": "git@github.com:clubinvest/bulldesk.git"
+  "prettier": {
+    "parser": "typescript",
+    "printWidth": 80,
+    "semi": false,
+    "singleQuote": true,
+    "tabWidth": 2,
+    "trailingComma": "all"
+  },
+  "repository": "git@github.com:clubinvest/bulldesk.git",
+  "scripts": {
+    "build": "tsc",
+    "tslint": "tslint -p .",
+    "tslint:fix": "tslint --fix -c ./tslint.json 'src/**/*{.ts,.tsx}'"
+  }
 }
