--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint-staged": "8.1.0",
     "prettier": "1.15.3",
     "tslint": "5.12.0",
+    "tslint-config-prettier": "^1.17.0",
     "typescript": "3.2.2"
   },
   "husky": {
