--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
       "git add"
     ]
   },
-  "main": "dist/index.js",
+  "main": "src/index.ts",
   "prettier": {
     "parser": "typescript",
     "printWidth": 80,
